# Submit4DN

./: .flake8  .gitignore  .travis.yml  AllItems.xls  AllItems_ordered.xls  CHANGELOG.rst  Makefile  Metadata_Submission_Form.xls  Metadata_Submission_Form_ordered.xls  README.md  README.rst  cgap.xls  del.py  delelte.py  delete.py  delete.txt  get_field_info.py  import_data.py  micro-C_V4.xlsx  patch.json  pyproject.toml  pytest.ini  readme.md  requirements.txt  result.xls  setup.cfg  setup.py  tasks.py  tox.ini
.github/workflows/: main-publish.yml  main.yml
4DNScripts/: ENCODE_get_fields.py  FDNdcic.py  SubmitData.xls  SubmitDataRaoetal.xls  SubmitDataTest.xls  SubmitDataTestV2.xls  SubmitDataV1.xls  Test_LabAwardUser.xls  WriteCVSfiles.py  WritePickleAllMeta.py  encodedccMod.py  fdnDCIC.py  fields.xls  get_field_info.py  import_data.py  submit_file.py  trial.py  uploadable_fields.py
4DNScripts/LabAwardPI/: LabAwardPI_p1.xls  LabAwardPI_p2.xls  Test_LabAwardUser.xls
4DNScripts/Rao_et_al_2014/: Rao2014experiments.xlsx  SubmitDataRaoetal.xls  fieldsRao.xls  fieldsRao106.xls  fieldsRaoBiosample.xls  fieldsRaoExpFile.xlsx  fieldsRaoPatch.xls  fieldsRaoProtocol.xls  fieldsRaoProtocolnoDoc.xls  fieldsRaoPublication.xls  fieldsRaoTest.xls  fieldsRaotestupload.xls  (+13 more)
4DNWranglerTools.egg-info/: PKG-INFO  SOURCES.txt
AllScirpts/: AnalyzeBiosampleSource.py  AnalyzeExpBioSource.py  AnalyzeExpBiosample.py  AwardConflictResolve.py  FindAllKeys.py  PrintAllKeys.py  PrintSampleFields.py  PrintSampleFieldsUsage.py  PrintSampleFieldsUsagePandas.py  WritePickleAllMetaALL.py  WritePickleUniqueBiosample.py  delete.py  functions.py  print_json_dict_csv.py  printlenofallitems.py  readpickle.py  readpickleExpUserLab.py  readpickleExpUserLabTemp.py  readpickleLabs.py  readpickleLibraryBiosample.py  readpickleUserLab.py  writepickleAllObjectAllKey.py  writepickleAllObjectGraphKey.py  writepickleAllObjectList.py
Data_Files/: SRR2671430_1.xls  test_put.xls
Orderedlist/: AllItems.xls  OrderedItems.xls  OrderedItemsV1.xls  fieldorder.xls  fieldsRao.xls  listmaker.py  listmaker_excel_Rao.py
Submission Pack/: How to Submit Metadata to 4DN.docx
SubmitFile/: example.fastq  submit_file.py  submit_file_original.py  validateManifest
System_Files/: reference_fields.xls  reference_fields_Dekker.xls
dcicutils/: ff_utils.py
doc/: metadata_submission.md  rest_api.md  schema_info.md
pyencoded-tools/: Kencodeddcc.py  README.md  readmeKoray.md
reference_files/: fetch.py  file_reference.json  upload.py
scripts/: tag-and-push
tests/: conftest.py  fetch.py  patch.py  post.py  test_fdnDCIC.py  test_get_field_info.py  test_import_data.py  test_submit_utils.py  test_version.py  upload.py  upload_file.py
wranglertools/: AllItems.xls  AllItems_ordered.xls  _version.py  constants.py  encodedccMod.py  fdnDCIC.py  get_field_info.py  import_data.py
(+178 files in other folders)
